# T_bank_24_hack

./: .gitignore  Dockerfile  README.md  pyproject.toml
App/: data_reading.py  front.py  requirements.txt  synthesis.py  text_analyzer.py
